<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.features.newTask.NewTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <!-- Task Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/edtTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Task Name"
                android:inputType="text"
                tools:text="Task Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Task Description Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:inputType="text"
                tools:text="Task Description" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Task Time Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtTaskTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_time"
                android:inputType="number"
                tools:text="Task Time" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spnTaskTypes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/task_types"
            android:prompt="@string/task_prompt" />

        <TextView
            android:id="@+id/tvCreateNewTask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corners_primary_color"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/create_new_task"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvCancelNewTask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corners_red"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
